# llm-kernel

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_tests.py
examples/: examples.py
src/llm_kernel/: __init__.py  data_models.py  data_models_test.py  scorer.py  scorer_test.py  utils.py  utils_test.py
src/llm_kernel/modules/: __init__.py  base.py
src/llm_kernel/signatures/: __init__.py  base.py  individual.py  kernels.py  pairwise.py  signatures_test.py
